--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
             android:layout_weight="1"
             android:padding="16dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/blender" />
+            android:src="@drawable/blender_2" />
 
         <ImageButton
             android:id="@+id/btn_buka_ras_Nonelektronik"
@@ -72,7 +72,7 @@
             android:layout_weight="1"
             android:padding="16dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/pisau" />
+            android:src="@drawable/pisau_2" />
     </LinearLayout>
 
     <TextView
